--- a/templates/static-pages/homepage.html
+++ b/templates/static-pages/homepage.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="about-me">About</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -24,7 +24,7 @@
     </header>
     <section id="about">
         <div class="container">
-            <h2>About Me</h2>
+            <h2>Me, in a nutshell</h2>
             <p>Brief introduction about yourself.</p>
         </div>
     </section>
@@ -53,7 +53,7 @@
     </section>
     <footer>
         <div class="container">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2024 Steven Serrao. All rights reserved.</p>
         </div>
     </footer>
 </body>
