--- a/templates/static-pages/style.css
+++ b/templates/static-pages/style.css
@@ -44,6 +44,15 @@ header nav ul li a:hover {
     text-decoration: underline;
 }
 
+.contact-details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    padding: 2rem 0;
+}
+
 .container {
     width: 80%;
     margin: 0 auto;
