--- a/templates/static-pages/homepage.html
+++ b/templates/static-pages/homepage.html
@@ -9,17 +9,12 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="logo">
-                <h1>Your Name</h1>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="about-me">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+        <div class="video-container">
+            <video autoplay muted loop id="background-video">
+                <source src="frontend\public\2792370-hd_1920_1080_30fps.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <h1 class="hollow-text">STEVEN SERRAO</h1>
         </div>
     </header>
     <section id="about">
