added extras, skills and contact sections. Updated main html file.

--- a/backend/public/css/Footer.css
+++ b/backend/public/css/Footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-image: url("./Images/header-black.jpg");
+    background-image: url("../images/header-black.jpg");
     color: #fff;
     padding: 20px 0;
     margin-top: auto;
