--- a/backend/public/css/Header.css
+++ b/backend/public/css/Header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&family=Roboto:wght@400;700&family=Dancing+Script:wght@400&display=swap');
+
 header {
     background-image: url("../images/header-black.jpg"); /* Darker subdued blue gradient background */
     color: #f5f5f5; /* Dark text color */
